<resources>
    <string name="app_name">MySurvey</string>

    <string name="action_settings">Settings</string>

    <string name="default_survey_question">Do you like turtles</string>
    <string name="default_option1">Yes</string>
    <string name="default_option2">No</string>

    <!-- SurveyActivity Strings-->
    <string name="results_button">Results</string>
    <string name="create_your_own_button">Create Your Own!</string>

    <!-- ResultsActivity Strings-->
    <string name="title_activity_results">Results</string>
    <string name="results_text_view">Results</string>
    <string name="option_one_label">Option 1:</string>
    <string name="option_two_label">Option 2:</string>
    <string name="continue_button">Continue Survey</string>
    <string name="reset_button">Reset Results</string>

    <!-- CreateSurveyActivity Strings-->
    <string name="title_activity_create_survey">Create Survey</string>
    <string name="survey_question_hint">Enter your question here</string>
    <string name="option_one_hint">Enter option one</string>
    <string name="option_two_hint">Enter option two</string>
    <string name="create_survey_button">Create Survey</string>

</resources>
