<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="start"
              android:background="@android:color/holo_blue_light">

    <TextView
        android:id="@+id/resultsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_text_view"
        android:layout_gravity="center_horizontal"
        android:textSize="48sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/option1Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_one_label"
            android:textSize="48sp"/>

        <TextView
            android:id="@+id/option1Results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="48sp"
            tools:text="3"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/option2Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_two_label"
            android:textSize="48sp"/>

        <TextView
            android:id="@+id/option2Results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="48sp"
            tools:text="4"/>

    </LinearLayout>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_button"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_button"
        android:layout_gravity="center"/>



</LinearLayout>
