<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@android:color/holo_blue_light"
                tools:context="com.kylehebert.mysurvey.controller.CreateSurveyActivity">

    <EditText
        android:id="@+id/survey_question_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/survey_question_hint"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/option_one_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/option_one_hint"
        android:layout_below="@id/survey_question_edit_text"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/option_two_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/option_two_hint"
        android:layout_below="@id/option_one_edit_text"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/createSurveyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/create_survey_button"
        android:layout_below="@id/option_two_edit_text"
        android:layout_marginTop="48dp"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
